# django-nextjs-tw-boilerplate

./: .gitignore  Makefile  README.md  compose.dev.yml  compose.prod.yml  compose.qa.yml
.github/workflows/: deploy.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  entrypoint.sh  pyproject.toml
backend/api/: urls.py
backend/authentication/: adapters.py  admin.py  emails.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py
backend/authentication/tests/: conftest.py  test_adapters.py  test_models.py
backend/backend/: celery.py  hosts.py  schema.py  settings.py  settings_test.py  urls.py
backend/backend/logging/: __init__.py  filters.py  formatters.py  handlers.py  loggers.py
backend/backend/tests/: conftest.py  test_hosts.py
backend/templates/account/email/: base_message.txt  email_confirmation_message.txt  email_confirmation_subject.txt  password_reset_key_message.txt  password_reset_key_subject.txt
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  Makefile  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/(landing)/: layout.js
frontend/src/app/(landing)/home/: page.js
frontend/src/app/(logout)/auth/logout/: page.js
frontend/src/app/auth/: layout.js
frontend/src/app/auth/login/: GoogleButton.js  LoginForm.js  layout.js  page.js
frontend/src/app/auth/lost-password/: page.js
frontend/src/app/auth/reset-password/: page.js
frontend/src/app/auth/sign-up/: page.js
frontend/src/app/dashboard/: DashboardLayout.js  DashboardSidebar.js  layout.js  page.js
frontend/src/components/: provider.js
frontend/src/components/navigation/: navbar.js  sidebar.js  topbar.js
frontend/src/components/user/: summary.js
frontend/src/lib/: api.js  auth.js  colors.js  context.js  cookies.js
frontend/src/lib/server/: auth.js
