[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Amine SGHIR <sghir.ma@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<4"
django = "^5.1.6"
django-hosts = "^6.0"
python-decouple = "^3.8"
djangorestframework = "^3.15.2"
django-allauth = "^0.63.6"
dj-rest-auth = "^6.0.0"
django-import-export = "^4.1.1"
django-cors-headers = "^4.4.0"
django-filter = "^24.2"
pillow = "^10.4.0"
djangorestframework-simplejwt = "^5.3.1"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"
django-post-office = "^3.9.0"
django-crontab = "^0.7.1"
uvicorn = "^0.31.0"
celery = { extras = ["redis"], version = "^5.4.0" }
gunicorn = "^23.0.0"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.7.0"
google-auth = "^2.35.0"
drf-spectacular = "^0.27.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest-cov = "^5.0.0"
pytest-django = "^4.9.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.9.6"
mypy = "^1.15.0"
types-requests = "^2.32.0.20241016"
types-python-dateutil = "^2.9.0.20241206"
black = "^25.1.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings_test"
python_files = "tests.py test_*.py *_tests.py"
addopts = ["--cov=."]

[tool.coverage.run]
omit = ["manage.py", "*/migrations/*", "*/tests/*", "*/wsgi.py", "*/asgi.py"]

[tool.coverage.report]
skip_covered = true
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
exclude = ["migrations", "tests"]

[tool.ruff]
exclude = ["migrations", "tests", "backend/settings_test.py"]